--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: date_picker_textfield
+name: date_picker_bottom_sheet
 description: A customizable TextFormField with a built-in date picker.
 version: 1.0.0
-homepage: https://github.com/tuusuario/date_picker_textfield
+homepage: https://github.com/absagarcia/date_picker_textfield
 
 environment:
   sdk: ">=2.19.0 <4.0.0"
