--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -7,9 +7,9 @@ name: Dart Package CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -17,8 +17,8 @@ jobs:
 
     strategy:
       matrix:
-        dart-version: [ "stable", "beta" ]
-        
+        dart-version: ["stable", "beta"]
+
     steps:
       - uses: actions/checkout@v4
 
@@ -29,8 +29,8 @@ jobs:
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
       - name: Install dependencies
-        run: dart pub get
-        
+        run: flutter pub
+
       - name: Verify package score
         run: dart pub publish --dry-run
       # Uncomment this step to verify the use of 'dart format' on each commit.
