--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
       - name: Install dependencies
-        run: flutter pub get
+        run: flutter pub get --no-example
 
       - name: Verify package score
         run: dart pub publish --dry-run
