--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,5 +1,5 @@
-# Workflow for Flutter package with Pub.dev validation
-name: Flutter Package CI
+# Workflow to validate Flutter tests
+name: Flutter CI
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,37 +28,6 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      # Verify code formatting
-      - name: Verify formatting
-        run: flutter format --set-exit-if-changed .
-
-      # Analyze code
-      - name: Analyze code
-        run: flutter analyze
-
       # Run tests
       - name: Run tests
         run: flutter test
-
-  publish:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "stable"
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      # Publish to Pub.dev
-      - name: Publish package
-        env:
-          PUB_TOKEN: ${{ secrets.PUB_TOKEN }}
-        run: flutter pub publish --dry-run
